[package]
name = "chat-test"
version = "0.1.0"
authors = ["Magic_RB <magic_rb@redalder.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde-big-array = "0.2.*"
bincode = "1.2.*"
base64 = "0.11.*"
openssl = "0.10.*"
rand = "0.7.*"
